RESOLVED FIXED209831
Regression(r253357) DeviceMotionEvent acceleration and rotationRate are null
https://bugs.webkit.org/show_bug.cgi?id=209831
Summary Regression(r253357) DeviceMotionEvent acceleration and rotationRate are null
Chris Dumez
Reported 2020-03-31 13:57:20 PDT
DeviceMotionEvent acceleration and rotationRate are null since r253357.
Attachments
Patch (14.40 KB, patch)
2020-03-31 14:35 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2020-03-31 13:57:36 PDT
Chris Dumez
Comment 2 2020-03-31 14:35:54 PDT
Darin Adler
Comment 3 2020-03-31 14:40:52 PDT
Comment on attachment 395093 [details] Patch Optional seems OK. For floating point sometimes we use NaN instead as we would use null for a pointer or string.
Chris Dumez
Comment 4 2020-03-31 14:41:54 PDT
(In reply to Darin Adler from comment #3) > Comment on attachment 395093 [details] > Patch > > Optional seems OK. For floating point sometimes we use NaN instead as we > would use null for a pointer or string. I personally really prefer Optional<double> than using special values like NaN. Makes the function declaration super clear.
EWS
Comment 5 2020-03-31 15:09:51 PDT
Committed r259315: <https://trac.webkit.org/changeset/259315> All reviewed patches have been landed. Closing bug and clearing flags on attachment 395093 [details].
Alexey Proskuryakov
Comment 6 2020-04-09 16:06:19 PDT
*** Bug 210261 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.